--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900"
     rel="stylesheet"
   />
-  <title>Donahue Electric Inc.</title>
+  <title>Donahue Electric Inc. | Servicing Western Massachusetts</title>
   <meta name="description" content="" />
   <meta name="author" content="@Issaafalkattan" />
 </head>
